--- a/MyShuttle/Form.css
+++ b/MyShuttle/Form.css
@@ -80,11 +80,14 @@
 }
 
 .overlay-content {
-  position: relative;
-  top: 25%;
-  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 50%;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 25px;
+  margin-left: -50px;
 }
 
 .overlay a {
